<resources>
    <string name="app_name">MovieApp</string>
    <string name="choose_russia_world">Choose Russia/World</string>
    <string name="reload">Reload</string>
    <string name="error">Error</string>
    <string name="title">Title</string>
    <string name="original_title">Original Title</string>
    <string name="genres">Genres</string>
    <string name="duration">%d min.</string>
    <string name="rating">%.1f (%d)</string>
    <string name="budget">Budget: %d $</string>
    <string name="revenue">Revenue: %d $</string>
    <string name="release_date">Release date: (%s)</string>
    <string name="overview">Overview</string>
    <string name="search">Search</string>
    <string name="poster_description">Poster</string>
    <string name="star_description">Star</string>
    <string name="network_unavailable">NETWORK UNAVAILABLE</string>
    <string name="connected_wifi">CONNECTED WIFI</string>
    <string name="connected_cellular">CONNECTED CELLULAR</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="history">History</string>
    <string name="favorite">Favorite</string>
    <string name="adult">Adult</string>
    <string name="hint_text_note">Enter your notes here</string>
    <string name="contacts">Contacts</string>
    <string name="contacts_alert_title">Доступ к контактам</string>
    <string name="contacts_alert_message">Экран останется пустым, потому что доступ к контактам не предоставлен</string>
    <string name="contacts_alert_button">Закрыть</string>
    <string name="map">Карта</string>
    <string name="normal">Нормальная</string>
    <string name="satellites">Спутники</string>
    <string name="terrain">Местность</string>
    <string name="traffic">Траффик</string>
    <string name="map_mode">Режим карты</string>
    <string name="enter_query">Введите запрос</string>
    <string name="start_marker">Стартовый маркер</string>
    <string name="looks_like_location_disabled">Похоже, местоположение недоступно. Проверьте настройки вашего телефона</string>
    <string name="persons">Persons</string>
    <string name="people_name">Name</string>
    <string name="people_gender">Gender: %d</string>
    <string name="people_popularity">%.3f</string>
    <string name="people_birthday">Birthday: %s</string>
    <string name="people_deathday">Deathday: %s</string>
    <string name="people_place_of_birth">Place of birth: %s</string>
    <string name="people_biography">Biography</string>
</resources>