<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textNowPlaying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/category_text_size"
        android:text="@string/now_playing" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainFragmentRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textPopular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/category_text_size"
        android:text="@string/popular" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainFragmentRecyclerView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainFragmentRecyclerView" />
    <TextView
        android:id="@+id/textTopRated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/category_text_size"
        android:text="@string/top_rated" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainFragmentRecyclerView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainFragmentRecyclerView" />
    <TextView
        android:id="@+id/textUpcoming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/category_text_size"
        android:text="@string/upcoming" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainFragmentRecyclerView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainFragmentRecyclerView" />


</androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mainFragmentFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@android:color/transparent"
        app:tint="@null"
        android:scaleType="fitCenter"
        android:contentDescription="@string/choose_russia_world"
        android:src="@drawable/ic_russia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="@dimen/fab_icon_size" />

    <FrameLayout
        android:id="@+id/mainFragmentLoadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loadingBackground"
        android:visibility="gone"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
